--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <link rel="shortcut icon" href="../favicon.ico">
 
       <script src="https://kit.fontawesome.com/1b5fdf4bb2.js" crossorigin="anonymous"></script>
-      <link href="../main.css" rel="stylesheet">
+      <link href="main.css" rel="stylesheet">
       <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
