--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <section class="jumbotron jumbotron-fluid text-center">
       <div class="navbar navbar-static-top navbar-expand-lg" role="navbar">
         <a href="/" class="navbar-brand">
-          <!-- <img src="#" alt="Logo" /> -->
-          Potential Theme <small>Help Center</small>
+          <!-- <img src="#" alt="Logo" />Potential Theme <small>Help Center</small> -->
+          Potential Theme
         </a>
         
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,6 +35,9 @@
 
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="nav navbar-nav">
+            <li class="nav-item header-link solid-btn">
+              <a class="nav-link" href="https://shopify.com" target="_blank">Submit a ticket</a>
+          </li>
             <li class="nav-item header-link">
                 <a class="nav-link" href="https://shopify.com" target="_blank">Back to Home</a>
             </li>
@@ -84,7 +87,7 @@
         <div class="row content justify-content-center">
           <div class="col-md-12 text-center">
             <div class="heading">
-              <h1>Categories</h1>
+              <h3>Theme Documentation</h3>
               <p class="lead">Choose a category to get started.</p>
             </div>
           </div>
@@ -99,12 +102,11 @@
                   <!-- <p class="card-text">Category with help articles about how to get started.</p> -->
 
                   <div class="author mt-3">
-                    <small>5 articles by 1 author</small>
+                    <small>5 articles</small>
 
-                    <div class="avatars">
-                      <!-- <i class="fa fa-user-circle mr-1">&nbsp;</i> -->
+                    <!--<div class="avatars">
                       <div class="author-avatar" style="background-image: url('...//author_avatar_female_2.jpg');">&nbsp;</div>
-                    </div>
+                    </div>-->
                   </div>
                         
                   <!-- <small>There are no articles under this category, yet.</small> -->
@@ -122,12 +124,12 @@
                   <!-- <p class="card-text">Category with help articles about how to get started.</p> -->
 
                   <div class="author mt-3">
-                    <small>7 articles by 3 authors</small>
-                    <div class="avatars">
+                    <small>7 articles</small>
+                    <!--<div class="avatars">
                       <i class="fa fa-user-circle mr-1 avatar-placeholder">&nbsp;</i>
                       <div class="author-avatar" style="background-image: url('...//author_avatar_female_1.jpg');">&nbsp;</div>
                       <div class="author-avatar" style="background-image: url('...//author_avatar_male_1.jpg');">&nbsp;</div>
-                    </div>
+                    </div>-->
                   </div>
                 </div>
               </div>
@@ -143,11 +145,11 @@
                   <!-- <p class="card-text">Category with help articles about how to get started.</p> -->
 
                   <div class="author mt-3">
-                    <small>15 articles by 2 authors</small>
-                    <div class="avatars">
+                    <small>15 articles</small>
+                    <!--<div class="avatars">
                       <div class="author-avatar" style="background-image: url('...//author_avatar_female_2.jpg');">&nbsp;</div>
                       <div class="author-avatar" style="background-image: url('...//author_avatar_male_1.jpg');">&nbsp;</div>
-                    </div>
+                    </div>-->
                   </div>
                 </div>
               </div>
