--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="navbar navbar-static-top navbar-expand-lg" role="navbar">
         <a href="/" class="navbar-brand">
           <!-- <img src="#" alt="Logo" />Potential Theme <small>Help Center</small> -->
-          Potential Theme
+          Potential Theme Help Center
         </a>
         
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
